<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cows-Mobile-Client</string>
    <string name="title_activity_cas_auth">CasAuth</string>
    <string name="title_activity_event_creation">EventCreation</string>
    <string name="title_activity_room_select">RoomSelect</string>
    <string name="title_activity_room_event_view">RoomEventView</string>
    <string name="building_prompt">Please select a building</string>
    <string name="room_prompt">Please select a room</string>
    <string name="back">Back</string>
    <string name="view_events">View Events</string>
    <string name="create_event">Create Event</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="time">Time</string>
    <string name="event">Event</string>
    <string name="refresh">Refresh</string>
    <string name="availTime">Availability</string>
    <string name="availability">Room Availability</string>
    <string name="description">Description</string>

    <string-array name="buildingOptions">
        <item>All Buildings</item>
        <item>1590 Tilia</item>
        <item>1605 Tilia</item>
        <item>1715 Tilia</item>
        <item>215 Sage</item>
    </string-array>
    
    <string-array name="buildingOptionsCreate">
        <item>Tap to Select a Building</item>
        <item>1590 Tilia</item>
        <item>1605 Tilia</item>
        <item>1715 Tilia</item>
        <item>215 Sage</item>
    </string-array>
    
    <string-array name="roomOptions">
        <item>All Rooms</item>
        <item>1142 in 1590 Tilia</item>
        <item>1103 in 1605 Tilia</item>
        <item>1111 in 1605 Tilia</item>
        <item>1162 in 1605 Tilia</item>
        <item>1106 in 1715 Tilia</item>
        <item>1119 in 1715 Tilia</item>
        <item>1121 in 1715 Tilia</item>
        <item>1123 in 1715 Tilia</item>
        <item>1161 in 1715 Tilia</item>
        <item>1104 in 215 Sage</item>
        <item>1113 in 215 Sage</item>
    </string-array>
    <string-array name="roomOptions1590">
        <item>1142</item>
    </string-array>
    <string-array name="roomOptions1605">
        <item>All Rooms in 1605 Tilia</item>
        <item>1103</item>
        <item>1111</item>
        <item>1162</item>
    </string-array>
    <string-array name="roomOptions1715">
        <item>All Rooms in 1715 Tilia</item>
        <item>1106</item>
        <item>1119</item>
        <item>1121</item>
        <item>1123</item>
        <item>1161</item>
    </string-array>
    <string-array name="roomOptions215">
        <item>All Rooms in 215 Sage</item>
        <item>1104</item>
        <item>1113</item>
    </string-array>
    
    <string-array name="roomOptions1590Create">
        <item>Tap to Select a Room</item>
        <item>1142</item>
    </string-array>
    <string-array name="roomOptions1605Create">
        <item>Tap to Select a Room</item>
        <item>1103</item>
        <item>1111</item>
        <item>1162</item>
    </string-array>
    <string-array name="roomOptions1715Create">
        <item>Tap to Select a Room</item>
        <item>1106</item>
        <item>1119</item>
        <item>1121</item>
        <item>1123</item>
        <item>1161</item>
    </string-array>
    <string-array name="roomOptions215Create">
        <item>Tap to Select a Room</item>
        <item>1104</item>
        <item>1113</item>
    </string-array>
    <string-array name="EventTypes">
        <item name="Board_Meeting">Board Meeting</item>
        <item name="China_Center">China Center</item>
        <item name="CWEE">CWEE Meetings</item>
        <item name="EEC">EEC Meetings</item>
        <item name="EI_Seminars">EI Seminars</item>
        <item name="Energy_Institute">Energy Institute Meetings</item>
        <item name="ITS_Seminar">ITS Friday Seminars</item>
        <item name="Maintenance_Other">Maintenance/Other</item>
        <item name="Meetings">ITS Meetings</item>
        <item name="NextSTEPS_Seminars">NextSTEPS Seminars</item>
        <item name="Office_Hours">Office Hours</item>
        <item name="Other_ITS_Seminars">Other ITS Seminars</item>
        <item name="Phev">PH&amp;EV</item>
        <item name="Policy_Institute">Policy Institute</item>
        <item name="STEPS">NextSTEPS</item>
        <item name="WCEC_Meetings">WCEC Meetings</item>
    </string-array>
    <string-array name="recurrenceType">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string-array name="daysOfWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="locattr">
        <item>Front-TV</item>
        <item>ITSWebsite</item>
    </string-array>
    <string-array name="eventattr">
        <item>Board_Meeting</item>
        <item>China_Center</item>
        <item>CWEE</item>
        <item>EEC</item>
        <item>EI_Seminars</item>
        <item>Energy_Institute</item>
        <item>ITS_Seminar</item>
        <item>Maintenance_Other</item>
        <item>Meetings</item>
        <item>NextSTEPS_Seminars</item>
        <item>Office_Hours</item>
        <item>Other_ITS_Seminars</item>
        <item>Phev</item>
        <item>Policy_Institute</item>
        <item>STEPS</item>
        <item>WCEC_Meetings</item>
    </string-array>
    <string-array name="catattr">
        <item>Class</item>
        <item>Conference</item>
        <item>Meeting</item>
        <item>Other</item>
        <item>Seminars</item>
    </string-array>
    <string-array name="Locations">
        <item>Display on Front TV</item>
        <item>Homepage Event Listings</item>
    </string-array>
    <string-array name="Categories">
        <item>Classes</item>
        <item>Conferences</item>
        <item>Meetings</item>
        <item>Other</item>
        <item>Seminars</item>
    </string-array>

    <string name="title_activity_recurrence">Recurrence</string>
    <string name="title_">"Title: "</string>
    <string name="description_">"Description: "</string>
    <string name="event_types_">"Event Types: "</string>
    <string name="categories_">"Categories: "</string>
    <string name="notes_">"Notes: "</string>
    <string name="display_locations_">"Display Locations: "</string>
    <string name="configure_recurrence">Configure Recurrence</string>
    <string name="start_time_">Start Time:</string>
    <string name="end_time_">End Time:</string>
    <string name="set_date_for_event">Event Date:</string>
    <string name="clear">Clear</string>
    <string name="event_reoccurs_every_">Event reoccurs every:</string>
    <string name="recurrence_start_date_">"Recurrence Start Date: "</string>
    <string name="recurrence_settings">Recurrence Settings</string>
    <string name="recurrence_end_date_">Recurrence End Date:</string>
    <string name="event_creation">Event Creation</string>
    <string name="event_date_">"Event Date: "</string>
    <string name="event_lookup">Event Lookup</string>
    <string name="events">Events</string>
    <string name="cows_mobile">Cows Mobile</string>
    <string name="room">Room</string>
    <string name="required_fields_are_in_blue">Required fields are in blue</string>
    <string name="title_activity_room_available_time">RoomAvailableTime</string>
    <string name="action_settings">Settings</string>

</resources>