<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/events"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:text="@string/time"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:text="@string/room"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:text="@string/event"
            android:textSize="32sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        
        <TextView
            android:id="@+id/rowLoc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rowTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 			<TextView
            android:id="@+id/rowLoc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/rowTime10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
 <TextView
            android:id="@+id/rowLoc10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/rowTitle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:textSize="24sp" />

    </TableRow>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="7dp" >

        <Button
            android:id="@+id/backButtonToRoomSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|center_horizontal"
            android:padding="7dp"
            android:text="@string/back" />
        <Button
            android:id="@+id/createEventFromEventViewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dip"
            android:gravity="center_vertical|center_horizontal"
            android:padding="7dp"
            android:text="@string/create_event" />

    </LinearLayout>

</TableLayout>
